<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>



    <groupId>es.iti.wakamiti</groupId>
    <artifactId>spring-verify-example</artifactId>
    <version>2.0.1</version>

    <properties>
        <java.version>17</java.version>
        <wakamitiLog>debug</wakamitiLog>
        <spring-boot.version>4.1.0</spring-boot.version>

        <jacoco.wakamiti.execution.data.file>${project.build.directory}/coverage-reports/jacoco-wakamiti.exec
        </jacoco.wakamiti.execution.data.file>

        <maven.deploy.skip>true</maven.deploy.skip>
    </properties>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-log4j2</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
        </dependency>
        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>3.26.0-GA</version>
        </dependency>

        <dependency>
            <groupId>org.jacoco</groupId>
            <artifactId>org.jacoco.agent</artifactId>
            <version>0.8.15</version>
            <classifier>runtime</classifier>
        </dependency>
    </dependencies>


    <profiles>
        <profile>
            <id>verify-profile</id>
            <activation>
                <property>
                    <name>!skipTests</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <!-- Start H2 before integration tests, accepting tcp connections on the randomly selected port -->
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.6.3</version>

                        <executions>
                            <execution>
                                <id>start-h2</id>
                                <phase>pre-integration-test</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>${java.home}/bin/java</executable>
                                    <classpathScope>runtime</classpathScope>
                                    <async>true</async>
                                    <asyncDestroyOnShutdown>false</asyncDestroyOnShutdown>
                                    <arguments>
                                        <argument>-cp</argument>
                                        <classpath/>
                                        <argument>org.h2.tools.Server</argument>
                                        <argument>-tcp</argument>
                                        <argument>-tcpPort</argument>
                                        <argument>9092</argument>
                                        <argument>-baseDir</argument>
                                        <argument>${project.basedir}</argument>
                                        <argument>-ifNotExists</argument>
                                        <argument>-tcpPassword</argument>
                                        <argument>h2shutdown</argument>
                                    </arguments>
                                </configuration>
                            </execution>

                            <execution>
                                <id>stop-h2</id>
                                <phase>post-integration-test</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>${java.home}/bin/java</executable>
                                    <classpathScope>runtime</classpathScope>
                                    <arguments>
                                        <argument>-cp</argument>
                                        <classpath/>
                                        <argument>org.h2.tools.Server</argument>
                                        <argument>-tcpShutdown</argument>
                                        <argument>tcp://localhost:9092</argument>
                                        <argument>-tcpPassword</argument>
                                        <argument>h2shutdown</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- Start Spring Boot application prior to integration tests and stop it afterwards -->
                    <plugin>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-maven-plugin</artifactId>
                        <configuration>
                            <jvmArguments>
                                -Djacoco-agent.destfile=${jacoco.wakamiti.execution.data.file}
                                -Dspring.application.admin.enabled=true
                                -Dspring.devtools.add-properties=false
                                --add-opens java.base/java.lang=ALL-UNNAMED
                            </jvmArguments>
                            <wait>1000</wait>
                            <maxAttempts>180</maxAttempts>
                        </configuration>
                        <executions>
                            <execution>
                                <id>pre-integration-test</id>
                                <goals>
                                    <goal>start</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>post-integration-test</id>
                                <goals>
                                    <goal>stop</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>


                    <!-- Attach Wakamiti to the verify phase of the project -->
                    <plugin>
                        <groupId>es.iti.wakamiti</groupId>
                        <artifactId>wakamiti-maven-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <!-- Executed at integration-test phase -->
                            <execution>
                                <phase>integration-test</phase>
                                <goals>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <configurationFiles>${project.basedir}/src/test/resources/wakamiti.yaml</configurationFiles>
                            <!-- Enable/disable tests execution (enabled by default) -->
                            <skipTests>${skipTests}</skipTests>
                            <!-- Set log level for the plugin (info by default) -->
                            <logLevel>DEBUG</logLevel>
                            <!-- Wakamiti configuration -->
                            <properties>
                                <workingDir>target</workingDir>
                                <resourcePath>${project.basedir}/src/test/resources</resourcePath>
                                <outputFilePath>wakamiti/wakamiti.json</outputFilePath>
                                <logs.showStepSource>false</logs.showStepSource>
                                <htmlReport.output>wakamiti/wakamiti.html</htmlReport.output>
                            </properties>
                        </configuration>
                        <dependencies>
                            <!-- Wakamiti plugins -->
                            <dependency>
                                <groupId>es.iti.wakamiti</groupId>
                                <artifactId>rest-wakamiti-plugin</artifactId>
                                <version>2.11.0-SNAPSHOT</version>
                            </dependency>
                            <dependency>
                                <groupId>es.iti.wakamiti</groupId>
                                <artifactId>db-wakamiti-plugin</artifactId>
                                <version>3.10.0-SNAPSHOT</version>
                            </dependency>
                            <dependency>
                                <groupId>es.iti.wakamiti</groupId>
                                <artifactId>html-report-wakamiti-plugin</artifactId>
                                <version>2.11.0-SNAPSHOT</version>
                            </dependency>
                            <dependency>
                                <groupId>com.h2database</groupId>
                                <artifactId>h2</artifactId>
                                <version>2.4.240</version>
                            </dependency>
                        </dependencies>
                    </plugin>

                </plugins>
            </build>
        </profile>

        <!-- Copy site resources -->
        <profile>
            <id>build-site</id>
            <activation>
                <file>
                    <exists>src/site/site.xml</exists>
                </file>
            </activation>
            <build>
                <plugins>
                    <!-- Copy site resources -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>3.2.0</version>
                        <executions>
                            <execution>
                                <id>copy-markdown-docs</id>
                                <phase>pre-site</phase>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                                <configuration>
                                    <target>
                                        <!-- Uses README.md as the main page of the site -->
                                        <copy
                                                file="${basedir}/README.md"
                                                tofile="${basedir}/src/site/markdown/index.md"
                                                overwrite="true"
                                                failonerror="false"
                                        />
                                        <!-- Use any .md file from  /docs/* as a site resource -->
                                        <copy
                                                file="${basedir}/docs/*.md"
                                                todir="${basedir}/src/site/markdown"
                                                overwrite="true"
                                                failonerror="false"
                                        />
                                    </target>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>


    </profiles>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <release>17</release>
                    <verbose>${verbose}</verbose>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                    </compilerArgs>
                    <forceLegacyJavacApi>true</forceLegacyJavacApi>
                </configuration>
            </plugin>
            <!-- Enable/disable the tests (enable by default) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.6</version>
                <configuration>
                    <skipTests>${skipTests}</skipTests>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.5.6</version>
                <configuration>
                    <skipTests>${skipTests}</skipTests>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.15</version>
                <configuration>
                    <excludes>
                        <exclude>**/App*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>pre-integration-test</id>
                        <phase>package</phase>
                        <goals>
                            <goal>instrument</goal>
                            <goal>prepare-agent-integration</goal>
                        </goals>
                        <configuration>
                            <destFile>${jacoco.wakamiti.execution.data.file}</destFile>
                        </configuration>
                    </execution>
                    <execution>
                        <id>integration-test</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>restore-instrumented-classes</goal>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <dataFile>${jacoco.wakamiti.execution.data.file}</dataFile>
                            <outputDirectory>${project.build.directory}/jacoco-wakamiti</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- maven site -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.22.0</version>
            </plugin>

            <!-- Maven plugin -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.6.3</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>

        </plugins>
    </build>



    <distributionManagement>
        <site>
            <id>local-site</id>
            <url>${project.baseUri}</url>
        </site>
    </distributionManagement>

</project>
